--- a/flex-media.html
+++ b/flex-media.html
@@ -6,6 +6,10 @@
     <title>Activity 6-Flexbox and Media Queries</title>
 </head>
 <body>
-    
+    <div class="flex-container">
+        <div class="flex-item">Item1</div>
+        <div class="flex-item">Item2</div>
+        <div class="flex-item">Item3</div>
+    </div>
 </body>
 </html>
