--- a/flex-media.html
+++ b/flex-media.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activity 6-Flexbox and Media Queries</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="flex-container">
