--- a/flex-media.html
+++ b/flex-media.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Flexbox and Media Queries</h1>
     <div class="flex-container">
         <div class="flex-item">Item1</div>
         <div class="flex-item">Item2</div>
